@@ -1,3 +1,5 @@
+    * new mail template for blocking request
+
 2008-04-30  Jaromir Talir <jaromir.talir@nic.cz>
 
     * release 1.8.2
